<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>project-keeper-cli</artifactId>
    <packaging>jar</packaging>
    <name>Project Keeper Command Line Interface</name>
    <description>Project keeper is a tool that verifies and fixes project setups.</description>
    <parent>
        <relativePath>./pk_generated_parent.pom</relativePath>
        <groupId>com.exasol</groupId>
        <artifactId>project-keeper-cli-generated-parent</artifactId>
        <version>${revision}</version>
    </parent>
    <properties>
        <!-- Workaround for https://github.com/exasol/project-keeper/issues/530 -->
        <java.version>17</java.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>com.exasol</groupId>
            <artifactId>project-keeper-core</artifactId>
        </dependency>
        <dependency>
            <groupId>com.exasol</groupId>
            <artifactId>error-reporting-java</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-jdk14</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-model</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.exasol</groupId>
            <artifactId>project-keeper-shared-test-setup</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.exasol</groupId>
            <artifactId>maven-project-version-getter</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgs>
                        <arg>-Xlint:all,-processing,-path</arg>
                        <arg>-Werror</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <finalName>project-keeper-cli-${project.version}</finalName>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>com.exasol.projectkeeper.cli.ProjectKeeperLauncher</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <configuration>
                    <!-- Required to avoid error running integration tests:
                        java.lang.reflect.InaccessibleObjectException: Unable to make com.exasol.projectkeeper.cli.ProjectKeeperLauncherIT() accessible: module jakarta.json does not "opens com.exasol.projectkeeper.cli" to unnamed module @31a5c39e -->
                    <useModulePath>false</useModulePath>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <!-- Javadoc causes error "error: package java.util.logging is not visible
                        import java.util.logging.*;
                        (package java.util.logging is declared in module java.logging, but module jakarta.json does not read it)". -->
                    <additionalOptions>
                        <option>--add-modules</option>
                        <option>java.logging</option>
                        <option>--add-reads</option>
                        <option>jakarta.json=java.logging</option>
                    </additionalOptions>
                    <!-- Ignore warning "warning: The code being documented uses modules but the packages defined in https://github.com/exasol/project-keeper/apidocs/ are in the unnamed module." with Java 17-->
                    <failOnWarnings>false</failOnWarnings>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <url>https://github.com/exasol/project-keeper/</url>
</project>
